feat: add huddle-header section styles

--- a/index.html
+++ b/index.html
@@ -31,17 +31,13 @@
   <div class="huddle">
     <header class="huddle-header">
       <div class="huddle-container">
-        <div class="huddle-header__logo">
-          <img src="images/logo.svg" alt="typing message" class="huddle-header__logo-img">
-          <h1 class="huddle-header__logo-title">
-            <a class="huddle-header__logo-title__text" href="#">Huddle</a>
-          </h1>
-        </div>
+          <a class="huddle-header__logo" href="#"><img src="images/logo.svg" alt="typing message" class="huddle-header__logo-img" /></a>
+          <h1 class="huddle-header__title">Huddle</h1>
       </div>
     </header>
     <main class="huddle-main">
       <div class="huddle-container">
-        <img src="images/illustration-mockups.svg" alt="design chat" class="huddle-main__img">
+        <img src="images/illustration-mockups.svg" alt="design chat" class="huddle-main__img" />
         <article class="huddle-main__article">
           <h2 class="huddle-main__article-title">Build The Community Your Fans Will Love</h2>
           <p class="huddle-main__article-text">
