--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
     <main class="huddle-main">
       <div class="huddle-container">
         <img src="images/illustration-mockups.svg" alt="design chat" class="huddle-main__img" />
-        <article class="huddle-main__article">
-          <h2 class="huddle-main__article-title">Build The Community Your Fans Will Love</h2>
-          <p class="huddle-main__article-text">
+        <div class="huddle-main__register">
+        <article class="huddle-main__register-article">
+          <h2 class="huddle-main__register-article-title">Build The Community Your Fans Will Love</h2>
+          <p class="huddle-main__register-article-text">
             Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
             Create connections with your users as you engage in genuine discussion.
           </p>
         </article>
-        <button type="button" class="huddle-main__btn">Register</button>
+          <button type="button" class="huddle-main__register-btn">Register</button>
+        </div>
       </div>
     </main>
     <footer class="huddle-footer">
