feat: add footer section styles

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/styles.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -22,7 +25,7 @@
     }
 
     .attribution a {
-      color: hsl(228, 45%, 44%);
+      color: hsl(100, 100%, 100%);
     }
   </style>
 </head>
@@ -31,21 +34,22 @@
   <div class="huddle">
     <header class="huddle-header">
       <div class="huddle-container">
-          <a class="huddle-header__logo" href="#"><img src="images/logo.svg" alt="typing message" class="huddle-header__logo-img" /></a>
-          <h1 class="huddle-header__title">Huddle</h1>
+        <a class="huddle-header__logo" href="#"><img src="images/logo.svg" alt="typing message"
+            class="huddle-header__logo-img" /></a>
+        <h1 class="huddle-header__title">Huddle</h1>
       </div>
     </header>
     <main class="huddle-main">
       <div class="huddle-container">
         <img src="images/illustration-mockups.svg" alt="design chat" class="huddle-main__img" />
         <div class="huddle-main__register">
-        <article class="huddle-main__register-article">
-          <h2 class="huddle-main__register-article-title">Build The Community Your Fans Will Love</h2>
-          <p class="huddle-main__register-article-text">
-            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-            Create connections with your users as you engage in genuine discussion.
-          </p>
-        </article>
+          <article class="huddle-main__register-article">
+            <h2 class="huddle-main__register-article-title">Build The Community Your Fans Will Love</h2>
+            <p class="huddle-main__register-article-text">
+              Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+              Create connections with your users as you engage in genuine discussion.
+            </p>
+          </article>
           <button type="button" class="huddle-main__register-btn">Register</button>
         </div>
       </div>
@@ -53,9 +57,24 @@
     <footer class="huddle-footer">
       <div class="huddle-container">
         <ul class="huddle-footer__social">
-          <li class="huddle-footer__social-item"><a href="#" class="huddle-footer__social-item__link">facebook</a></li>
-          <li class="huddle-footer__social-item"><a href="#" class="huddle-footer__social-item__link">twitter</a></li>
-          <li class="huddle-footer__social-item"><a href="#" class="huddle-footer__social-item__link">instagram</a></li>
+          <li class="huddle-footer__social-item">
+            <a href="https://www.facebook.com/" target="_blank" class="huddle-footer__social-item__link">
+              facebook
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li class="huddle-footer__social-item">
+            <a href="https://twitter.com/" target="_blank" class="huddle-footer__social-item__link">
+              twitter
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="huddle-footer__social-item">
+            <a href="https://www.instagram.com/" target="_blank" class="huddle-footer__social-item__link">
+              instagram
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
         </ul>
         <div class="huddle-footer__copy">
           <p class="attribution">
